<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.list.ListFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/listAppBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/listToolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:menu="@menu/menu_list"
            app:title="Rick and Morty Band" />

    </com.google.android.material.appbar.AppBarLayout>


    <!-- Groups of views   -->
    <androidx.constraintlayout.widget.Group
        android:id="@+id/listErrorGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="listErrorContainer"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/listEmptyGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="listEmptyContainer"
        tools:visibility="gone" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/listMainGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="listMainContainer"
        tools:visibility="gone" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/listProgressGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="listProgressBar"
        tools:visibility="gone" />

    <!-- End group of views   -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/listMainContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listAppBarLayout">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/listSwipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/charactersRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

            </FrameLayout>

        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/listEmptyContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listAppBarLayout"
        tools:visibility="gone">

        <TextView
            android:id="@+id/listEmptyTitleTextView"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/list_empty_title_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/listEmptySubtitleTextView"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="42dp"
            android:layout_marginBottom="36dp"
            android:gravity="center"
            android:text="@string/list_empty_subtitle_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listEmptyTitleTextView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/listErrorContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listAppBarLayout">

        <TextView
            android:id="@+id/listErrorTitleTextView"
            style="@style/TextAppearance.MaterialComponents.Headline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/list_error_title_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/listErrorSubtitleTextView"
            style="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="42dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="42dp"
            android:gravity="center"
            android:text="@string/list_error_subtitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listErrorTitleTextView" />

        <Button
            android:id="@+id/listErrorRetryButton"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="36dp"
            android:padding="16dp"
            android:text="@string/list_error_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/listErrorSubtitleTextView" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/listProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listAppBarLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>